[package]
authors = ["Allen Goodman <allen@goodman.io>", "Gavin Massey <mdk@mystacktrace.org>"]
description = "Run NASM during your Cargo build."
homepage = "https://github.com/medek/nasm-rs"
keywords = ["assembler", "assembly", "build-dependencies", "cargo", "nasm"]
license = "MIT"
name = "nasm-rs"
readme = "README.markdown"
repository = "https://github.com/medek/nasm-rs"
version = "0.0.3"
